fix: increase height of media progress box for better visibility

--- a/src/browser/base/content/zen-styles/zen-media-controls.css
+++ b/src/browser/base/content/zen-styles/zen-media-controls.css
@@ -247,7 +247,7 @@
 
 #zen-media-progress-hbox {
   flex-grow: 1;
-  height: 1.1rem;
+  height: 2rem;
   align-items: center;
   padding-top: 0px !important;
 
